# learnopengl

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: camera.hpp  constants.cpp  shader.hpp
include/glad/: glad.h
include/utils/: camera.hpp  shader.hpp
src/: constants.cpp  cube.frag  glad.c  main.cpp  shader.vert
src/shaders/: cube.frag  cube.vert  light.frag
